# eventually-employable

./: .gitignore  README.md  pyproject.toml
checkpoints/20260420_010446/: metadata.json
checkpoints/ablation_pr010/: metadata.json
checkpoints/ablation_pr025/: metadata.json
checkpoints/ablation_pr050/: metadata.json
checkpoints/ablation_pr075/: metadata.json
checkpoints/ablation_pr100/: metadata.json
checkpoints/region_early/: metadata.json
checkpoints/region_full/: metadata.json
checkpoints/region_late/: metadata.json
checkpoints/region_middle/: metadata.json
docs/: ABLATION_RESULTS.md  ARCHITECTURE.md  AWS_GUIDE.md  GLOSSARY.md  SCALING.md
experiments/: run.py
experiments/configs/: default.yaml
notes/: 00_fl_in_one_hour.md  01_threat_model.md  02_robust_aggregation.md  03_lora_and_layer_regions.md  04_flower_architecture.md  05_experiment_protocol.md  06_metrics_deep_dive.md  07_aws_workflow.md  08_codebase_walkthrough.md
outputs/: ablation_log.txt
outputs/2026-04-20/01-04-40/.hydra/: config.yaml  hydra.yaml  (+1 more)
outputs/ablation_poison_ratio/: ablation_results.json
papers/: README.md
results/: region_sweep_log.txt
results/region_sweep/: eval_early.txt  eval_full.txt  eval_late.txt  eval_middle.txt
scripts/: aws_setup.sh  run_ablation.py  run_eval.py  run_region_sweep.sh  run_sweep.sh  spot_launch.sh  stop_instance.sh
src/fedlora_poison/: __init__.py  attacks.py  checkpointing.py  cli.py  client.py  data.py  defenses.py  eval.py  experiment.py  model.py  plotting.py  scaling.py  server.py
tests/: __init__.py  test_core.py
(+12 files in other folders)
